[package]
name = "reddit"
version = "0.1.0"
edition = "2021"
description = "Reddit CLI - Browse Reddit via the public JSON API"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.4", features = ["blocking", "gzip"] }
serde_json = "1.0.150"


[profile.release]
opt-level = 3
lto = true
strip = true
